--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "dotenv": "^16.0.0",
     "koa": "^2.13.4",
     "koa-logger": "^3.2.1",
-    "koa-router": "^10.1.1"
+    "koa-router": "^10.1.1",
+    "strip-ansi": "^6.0.1",
+    "winston": "^3.7.2"
   },
   "mikro-orm": {
     "useTsNode": true,
