--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@mikro-orm/mysql": "^5.1.2",
     "co-body": "^6.1.0",
     "dotenv": "^16.0.0",
+    "joi": "^17.6.0",
     "koa": "^2.13.4",
     "koa-logger": "^3.2.1",
     "koa-router": "^10.1.1",
