--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "koa": "^2.13.4",
     "koa-logger": "^3.2.1",
     "koa-router": "^10.1.1",
+    "moment": "^2.29.3",
     "strip-ansi": "^6.0.1",
     "winston": "^3.7.2"
   },
